syntax = "proto3";
// The greeter service definition.


service Greeter {
  // Sends a greeting
  rpc sayHello (HelloRequest) returns (HelloReply) {}
  rpc sayHelloAlot (HelloRequest) returns (stream HelloReply) {}
  rpc sayHelloTiny (stream HelloRequest) returns (HelloReply) {}
  rpc sayHelloToInfinity (stream HelloRequest) returns (stream HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
